--- a/index.html
+++ b/index.html
@@ -12,10 +12,43 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="limitation-main">
+        <section class="navigation-section horizontal-alignment">
+            <div class="horizontal-alignment">
+                <img src="./img/logo-small.png" alt="dropbox logo">
+                <nav>
+                    <ul class="horizontal-alignment">
+                        <li>
+                            <a class="gray-color" href="">Perch&egrave; Dropbox</a>
+                        </li>
+                        <li>
+                            <a class="gray-color" href="">Funzioni</a>
+                        </li>
+                        <li>
+                            <a class="gray-color" href="">Piani e Prezzi</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
 
-        </nav>
+            <div class="horizontal-alignment">
+                <nav class="horizontal-alignment">
+                    <ul class="horizontal-alignment">
+                        <li class="gray-color">
+                            <a class="gray-color" href="">Supporto</a>
+                        </li>
+                        <li>
+                            <a class="gray-color" href="">Contatta l'ufficio vendite</a>
+                        </li>
+                        <li>
+                            <a class="gray-color" href="">Ufficio</a>
+                        </li>
+                    </ul>
+                </nav>
+                <a href="">Inizio</a>
+            </div>
+            
+        </section>
 
         <section>
 
@@ -54,7 +87,7 @@
         </section>
 
         <section class="language">
-            
+
         </section>
     </footer>
 </body>
