finished header nav

--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
                         </li>
                     </ul>
                 </nav>
-                <a href="">Inizio</a>
+                <button class="azure-back">
+                    <a class=" white-color button" href="">Inizio</a>
+                </button>
             </div>
             
         </section>
 
-        <section>
+        <section class="jumbotron">
 
         </section>
     </header>
