--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
+    <!-- Fontawesome 6.5.2 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -52,8 +55,28 @@
             
         </section>
 
-        <section class="jumbotron">
+        <section class="jumbotron light-blue-back">
+            <div class="semi-limited">
+                    <h1>
+                        Tutto ci&ograve; che ti serve per il lavoro, in un unico posto
+                    </h1>
 
+                    <div class="header-text">
+                        <p>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business &egrave; pi&ugrave; facile da usare, pi&ugrave; sicuro e pi&ugrave; di uno spazio di archiviazione sicuro: &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente. 
+                        </p>
+
+                        <button class="azure-back">
+                            <a class="white-color" href="">Inizia la prova prova-gratuita</a>
+                        </button>
+
+                        <p>
+                            Annulla in qualsiasi momento
+                        </p>
+
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </div>
+            </div>
         </section>
     </header>
 
