--- a/index.html
+++ b/index.html
@@ -60,22 +60,26 @@
                     <h1>
                         Tutto ci&ograve; che ti serve per il lavoro, in un unico posto
                     </h1>
+                    <section class="header-content horizontal-alignment">
+                        <section class="header-text"> <!-- contiene prova gratuita e jumbotron -->
+                            <p>
+                                Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business &egrave; pi&ugrave; facile da usare, pi&ugrave; sicuro e pi&ugrave; di uno spazio di archiviazione sicuro: &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente. 
+                            </p>
 
-                    <div class="header-text">
-                        <p>
-                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business &egrave; pi&ugrave; facile da usare, pi&ugrave; sicuro e pi&ugrave; di uno spazio di archiviazione sicuro: &egrave; un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente. 
-                        </p>
+                            <button class="azure-back">
+                                <a class="white-color" href="">Inizia la prova prova-gratuita</a>
+                            </button>
 
-                        <button class="azure-back">
-                            <a class="white-color" href="">Inizia la prova prova-gratuita</a>
-                        </button>
+                            <p>
+                                Annulla in qualsiasi momento
+                            </p>
 
-                        <p>
-                            Annulla in qualsiasi momento
-                        </p>
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </section>
 
-                        <i class="fa-solid fa-arrow-down"></i>
-                    </div>
+                        <img src="./img/jumbo.png" alt="">
+
+                    </section>
             </div>
         </section>
     </header>
