started main content

--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
     </header>
 
     <main>
-        <section class="fatturazione">
-
+        <section class="fatturazione maxi-limited">
+            <h2>
+                Trova il piano business che fa per te
+            </h2>
         </section>
 
         <section class="partner">
