started first column

--- a/index.html
+++ b/index.html
@@ -89,6 +89,55 @@
             <h2>
                 Trova il piano business che fa per te
             </h2>
+            <section class="input">
+                <input type="radio" name="fatturazione" id="mensile" checked="checked"> Fatturazione mensile
+                <input type="radio" name="fatturazione" id="annuale"> Fatturazione annuale
+            </section>
+            
+            <section class="piani horizontal-alignment">
+                <article>
+                    <header class="horizontal-alignment">
+                        <i class="fa-solid fa-user"></i>
+                        <p>Singolo</p>
+                    </header>
+                    <main>
+                        <section>
+                            <h3>Professional</h3>
+                            <h4>&euro; 12.00</h4>
+                            <p>/mese</p>
+                        </section>
+
+                        <section>
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-user"></i>
+                                <p>1 utente</p>
+                            </div>
+                            
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-folder"></i>
+                                <p>5 TB di spazio di archiviazione sicuro</p>
+                            </div>
+
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <p>Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura</p>
+                            </div>
+
+                            <button>
+                                <a href="">Prova gratis per 30 giorni</a>
+                            </button>
+
+                            <span class="horizontal-alignment">
+                                <p>oppure</p>
+                                <a href="">acquista ora</a>
+                            </span>
+                        </section>
+                    </main>
+                </article>
+                <article></article>
+                <article></article>
+                <article></article>
+            </section>
         </section>
 
         <section class="partner">
