structure of plans

--- a/index.html
+++ b/index.html
@@ -128,15 +128,132 @@
                             </button>
 
                             <span class="horizontal-alignment">
-                                <p>oppure</p>
-                                <a href="">acquista ora</a>
+                                <p>oppure <a href=""> acquista ora</a></p>
                             </span>
+                        </section>
+
+                        <hr>
+
+                        <section>
+                            <h4>Punti Salenti del piano</h4>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Invia file fino a 100 GB con Dropbox Transfert</p>
+                            </div>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Cartelle offline su dispositivi mobili</p>
+                            </div>
                         </section>
                     </main>
                 </article>
-                <article></article>
-                <article></article>
-                <article></article>
+
+                <article>
+                    <header class="horizontal-alignment">
+                        <i class="fa-solid fa-user"></i>
+                        <p>Singolo</p>
+                    </header>
+                    <main>
+                        <section>
+                            <h3>Professional</h3>
+                            <h4>&euro; 12.00</h4>
+                            <p>/mese</p>
+                        </section>
+
+                        <section>
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-user"></i>
+                                <p>1 utente</p>
+                            </div>
+                            
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-folder"></i>
+                                <p>5 TB di spazio di archiviazione sicuro</p>
+                            </div>
+
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <p>Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura</p>
+                            </div>
+
+                            <button>
+                                <a href="">Prova gratis per 30 giorni</a>
+                            </button>
+
+                            <span class="horizontal-alignment">
+                                <p>oppure <a href=""> acquista ora</a></p>
+                            </span>
+                        </section>
+
+                        <hr>
+
+                        <section>
+                            <h4>Punti Salenti del piano</h4>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Invia file fino a 100 GB con Dropbox Transfert</p>
+                            </div>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Cartelle offline su dispositivi mobili</p>
+                            </div>
+                        </section>
+                    </main>
+                </article>
+
+                <article>
+                    <header class="horizontal-alignment">
+                        <i class="fa-solid fa-user"></i>
+                        <p>Singolo</p>
+                    </header>
+                    <main>
+                        <section>
+                            <h3>Professional</h3>
+                            <h4>&euro; 12.00</h4>
+                            <p>/mese</p>
+                        </section>
+
+                        <section>
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-user"></i>
+                                <p>1 utente</p>
+                            </div>
+                            
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-folder"></i>
+                                <p>5 TB di spazio di archiviazione sicuro</p>
+                            </div>
+
+                            <div class="horizontal-alignment">
+                                <i class="fa-solid fa-share-nodes"></i>
+                                <p>Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura</p>
+                            </div>
+
+                            <button>
+                                <a href="">Prova gratis per 30 giorni</a>
+                            </button>
+
+                            <span class="horizontal-alignment">
+                                <p>oppure <a href=""> acquista ora</a></p>
+                            </span>
+                        </section>
+
+                        <hr>
+
+                        <section>
+                            <h4>Punti Salenti del piano</h4>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Invia file fino a 100 GB con Dropbox Transfert</p>
+                            </div>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Cartelle offline su dispositivi mobili</p>
+                            </div>
+                        </section>
+                    </main>
+                </article>
+
             </section>
         </section>
 
