--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="limitation-main">
-        <section class="navigation-section horizontal-alignment">
+        <section class="navigation-section horizontal-alignment limitation-main">
             <div class="horizontal-alignment">
                 <img src="./img/logo-small.png" alt="dropbox logo">
                 <nav>
@@ -104,10 +104,10 @@
                         <section>
                             <h3>Professional</h3>
                             <h4>&euro; 12.00</h4>
-                            <p>/mese</p>
+                            <p class="gray-color">/mese</p>
                         </section>
 
-                        <section>
+                        <section class="funzionalita">
                             <div class="horizontal-alignment">
                                 <i class="fa-solid fa-user"></i>
                                 <p>1 utente</p>
@@ -123,18 +123,18 @@
                                 <p>Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura</p>
                             </div>
 
-                            <button>
-                                <a href="">Prova gratis per 30 giorni</a>
+                            <button class="azure-back">
+                                <a class="white-color" href="">Prova gratis per 30 giorni</a>
                             </button>
 
                             <span class="horizontal-alignment">
-                                <p>oppure <a href=""> acquista ora</a></p>
+                                <p>oppure <a class="blue-color" href=""> acquista ora</a></p>
                             </span>
                         </section>
 
                         <hr>
 
-                        <section>
+                        <section class="bonus">
                             <h4>Punti Salenti del piano</h4>
                             <div class="horizontal-alignment">
                                 <i class="azure-color fa-solid fa-check"></i>
@@ -150,52 +150,64 @@
 
                 <article>
                     <header class="horizontal-alignment">
-                        <i class="fa-solid fa-user"></i>
-                        <p>Singolo</p>
+                        <i class="fa-solid fa-users-line"></i>
+                        <p>Team</p>
                     </header>
                     <main>
                         <section>
-                            <h3>Professional</h3>
-                            <h4>&euro; 12.00</h4>
-                            <p>/mese</p>
+                            <h3>Advanced</h3>
+                            <h4>&euro; 18.00</h4>
+                            <p class="gray-color">/utente/mese</p>
                         </section>
 
-                        <section>
+                        <section class="funzionalita">
                             <div class="horizontal-alignment">
-                                <i class="fa-solid fa-user"></i>
-                                <p>1 utente</p>
+                                <i class="fa-solid fa-users-line"></i>
+                                <p>3 o pi&ugrave; utenti</p>
                             </div>
                             
                             <div class="horizontal-alignment">
                                 <i class="fa-solid fa-folder"></i>
-                                <p>5 TB di spazio di archiviazione sicuro</p>
+                                <p>Tutto lo spazio di cui ha bisogno il tuo team</p>
                             </div>
 
                             <div class="horizontal-alignment">
                                 <i class="fa-solid fa-share-nodes"></i>
-                                <p>Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura</p>
+                                <p>Sosfisticate funzioni di controllo per tenere al sicuro tutti i file del tuo team</p>
                             </div>
 
-                            <button>
-                                <a href="">Prova gratis per 30 giorni</a>
+                            <button class="azure-back">
+                                <a class="white-color" href="">Prova gratis per 30 giorni</a>
                             </button>
 
                             <span class="horizontal-alignment">
-                                <p>oppure <a href=""> acquista ora</a></p>
+                                <p>oppure <a class="blue-color" href=""> acquista ora</a></p>
                             </span>
                         </section>
 
                         <hr>
 
-                        <section>
+                        <section class="bonus">
                             <h4>Punti Salenti del piano</h4>
                             <div class="horizontal-alignment">
                                 <i class="azure-color fa-solid fa-check"></i>
-                                <p>Invia file fino a 100 GB con Dropbox Transfert</p>
+                                <p>Nessun limite di spazio per i file</p>
                             </div>
                             <div class="horizontal-alignment">
                                 <i class="azure-color fa-solid fa-check"></i>
                                 <p>Cartelle offline su dispositivi mobili</p>
+                            </div>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Risparmio del 50&percnt; rispetto alle iscrizioni singole</p>
+                            </div>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Possibilit&agrave; di inserire nuovi membri del team</p>
+                            </div>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Gestione dei permessi in base ai ruoli</p>
                             </div>
                         </section>
                     </main>
@@ -203,52 +215,56 @@
 
                 <article>
                     <header class="horizontal-alignment">
-                        <i class="fa-solid fa-user"></i>
-                        <p>Singolo</p>
+                        <i class="fa-solid fa-building"></i>
+                        <p>Azienda</p>
                     </header>
                     <main>
                         <section>
-                            <h3>Professional</h3>
-                            <h4>&euro; 12.00</h4>
-                            <p>/mese</p>
+                            <h3>Enterprise</h3>
+                            <h4>Contattaci</h4>
+                            <p class="gray-color">-</p>
                         </section>
 
-                        <section>
+                        <section class="funzionalita">
                             <div class="horizontal-alignment">
                                 <i class="fa-solid fa-user"></i>
-                                <p>1 utente</p>
+                                <p>10 o pi&ugrave; utenti</p>
                             </div>
                             
                             <div class="horizontal-alignment">
                                 <i class="fa-solid fa-folder"></i>
-                                <p>5 TB di spazio di archiviazione sicuro</p>
+                                <p>Soluzioni personalizzabili per la tua azienda</p>
                             </div>
 
                             <div class="horizontal-alignment">
                                 <i class="fa-solid fa-share-nodes"></i>
-                                <p>Funzioni di produttivit&agrave; premium e condivisione file semplice e sicura</p>
+                                <p>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</p>
                             </div>
 
-                            <button>
-                                <a href="">Prova gratis per 30 giorni</a>
+                            <button class="azure-back">
+                                <a class="white-color" href="">Contattaci</a>
                             </button>
 
                             <span class="horizontal-alignment">
-                                <p>oppure <a href=""> acquista ora</a></p>
+                                <p>oppure <a class="blue-color" href=""> acquista ora</a></p>
                             </span>
                         </section>
 
                         <hr>
 
-                        <section>
+                        <section class="bonus">
                             <h4>Punti Salenti del piano</h4>
                             <div class="horizontal-alignment">
                                 <i class="azure-color fa-solid fa-check"></i>
-                                <p>Invia file fino a 100 GB con Dropbox Transfert</p>
+                                <p>Cartelle offline su dispositivi mobili</p>
                             </div>
                             <div class="horizontal-alignment">
                                 <i class="azure-color fa-solid fa-check"></i>
-                                <p>Cartelle offline su dispositivi mobili</p>
+                                <p>Servizio assistenza 24/h</p>
+                            </div>
+                            <div class="horizontal-alignment">
+                                <i class="azure-color fa-solid fa-check"></i>
+                                <p>Possibilit&agrave; di personalizzazione totale</p>
                             </div>
                         </section>
                     </main>
