added partner section

--- a/index.html
+++ b/index.html
@@ -273,23 +273,56 @@
             </section>
         </section>
 
-        <section class="partner">
+        <article class="enterprise maxi-limited">
+            <header class="horizontal-alignment">
+                <i class="fa-solid fa-building"></i>
+                <p>Team</p>
+            </header>
+            <main>
+                <div class="horizontal-alignment">
+                    <section class="text">
+                        <h3>Enterprise</h3>
+                        <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                        <p>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                    </section>
+                    <section>
+                        <button class="azure-back">
+                            <a class="white-color" href="">Contatta l'ufficio vendite</a>
+                        </button>
+                    </section>
+                </div>
+            </main>
+        </article>
+
+        <section class="partner horizontal-alignment maxi-limited">
+            <section class="img">
+                <img src="./img/partner.png" alt="">
+            </section>
+
+            <section class="text">
+                <h3>Entra in contatto con un partner Dropbox</h3>
+                <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                <button>
+                    <a href="">
+                        Trova un partner
+                    </a>
+                </button>
+            </section>
+        </section>
+
+        <section class="operazioni maxi-limited">
 
         </section>
 
-        <section class="operazioni">
+        <section class="squares maxi-limited">
 
         </section>
 
-        <section class="squares">
-
-        </section>
-
-        <section class="prova-gratuita">
+        <section class="prova-gratuita maxi-limited">
 
         </section>
         
-        <section class="faq">
+        <section class="faq maxi-limited">
 
         </section>
     </main>
