added free trial

--- a/index.html
+++ b/index.html
@@ -395,8 +395,16 @@
 
         </section>
 
-        <section class="prova-gratuita maxi-limited">
+        <section class="light-blue-back">
+            <section class="prova-gratuita maxi-limited horizontal-alignment">
 
+                <h2 class="bordeaux-color">Porta Dropbox Business nella tua azienda.</h2>
+
+                <button>
+                    <a href="">Inizia la tua prova gratuita</a>
+                </button>
+
+            </section>
         </section>
         
         <section class="faq maxi-limited">
