"Add header to FAQ section and adjust layout"
This commit message describes the changes made in the code diff. It mentions the addition of a header to the FAQ section and the adjustment of the layout. It is concise

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         </section>
         
         <section class="faq maxi-limited">
-
+            <h2>Domande frequenti</h2>
         </section>
     </main>
 
