--- a/index.html
+++ b/index.html
@@ -440,13 +440,120 @@
         </section>
     </main>
 
-    <footer>
-        <section class="footer-links">
-
+    <footer class="black-back">
+        <section class="footer-links maxi-limited horizontal-alignment">
+            <section class="link-section">
+                <h4 class="white-color">Dropbox</h4>
+                <ul>
+                    <li>
+                        <a class="white-color" href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Piani</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">funzioni</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="link-section">
+                <h4 class="white-color">Prodotti</h4>
+                <ul>
+                    <li>
+                        <a class="white-color" href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Piani</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">funzioni</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="link-section">
+                <h4 class="white-color">Azienda</h4>
+                <ul>
+                    <li>
+                        <a class="white-color" href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Piani</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">funzioni</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="link-section">
+                <h4 class="white-color">Supporto</h4>
+                <ul>
+                    <li>
+                        <a class="white-color" href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Piani</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">funzioni</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="link-section">
+                <h4 class="white-color">Community</h4>
+                <ul>
+                    <li>
+                        <a class="white-color" href="">Applicazione desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Piani</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">Sicurezza</a>
+                    </li>
+                    <li>
+                        <a class="white-color" href="">funzioni</a>
+                    </li>
+                </ul>
+            </section>
+            
         </section>
 
-        <section class="language">
 
+        <section class="language maxi-limited">
+
+            <hr class="white-color">
+
+            <section class="horizontal-alignment">
+                <i class="gray-color fa-solid fa-earth-americas"></i>
+                <p class="gray-color">Italiano</p>
+                <i class="gray-color fa-solid fa-caret-up"></i>            </section>
         </section>
     </footer>
 </body>
