fixed icon alignment

--- a/index.html
+++ b/index.html
@@ -553,7 +553,8 @@
             <section class="horizontal-alignment">
                 <i class="gray-color fa-solid fa-earth-americas"></i>
                 <p class="gray-color">Italiano</p>
-                <i class="gray-color fa-solid fa-caret-up"></i>            </section>
+                <i class="gray-color fa-solid fa-caret-up"></i>            
+            </section>
         </section>
     </footer>
 </body>
