--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <nav>
                     <ul class="horizontal-alignment">
                         <li>
-                            <a class="gray-color" href="">Perch&egrave; Dropbox</a>
+                            <a class="gray-color" href="#partner">Perch&egrave; Dropbox</a>
                         </li>
                         <li>
-                            <a class="gray-color" href="">Funzioni</a>
+                            <a class="gray-color" href="#funzioni">Funzioni</a>
                         </li>
                         <li>
-                            <a class="gray-color" href="">Piani e Prezzi</a>
+                            <a class="gray-color" href="https://www.dropbox.com/plans">Piani e Prezzi</a>
                         </li>
                     </ul>
                 </nav>
@@ -38,18 +38,18 @@
                 <nav class="horizontal-alignment">
                     <ul class="horizontal-alignment">
                         <li class="gray-color">
-                            <a class="gray-color" href="">Supporto</a>
+                            <a class="gray-color" href="https://help.dropbox.com/it-it/">Supporto</a>
                         </li>
                         <li>
-                            <a class="gray-color" href="">Contatta l'ufficio vendite</a>
+                            <a class="gray-color" href="https://experience.dropbox.com/contact">Contatta l'ufficio vendite</a>
                         </li>
                         <li>
-                            <a class="gray-color" href="">Ufficio</a>
+                            <a class="gray-color" href="https://experience.dropbox.com/it-it/contact">Ufficio</a>
                         </li>
                     </ul>
                 </nav>
                 <button class="azure-back">
-                    <a class=" white-color button" href="">Inizio</a>
+                    <a class=" white-color button" href="https://www.dropbox.com/plans">Inizio</a>
                 </button>
             </div>
             
@@ -67,14 +67,14 @@
                             </p>
 
                             <button class="azure-back">
-                                <a class="white-color" href="">Inizia la prova prova-gratuita</a>
+                                <a class="white-color" href="https://www.dropbox.com/try/teams">Inizia la prova prova-gratuita</a>
                             </button>
 
                             <p>
                                 Annulla in qualsiasi momento
                             </p>
 
-                            <i class="fa-solid fa-arrow-down"></i>
+                            <a href="#1"><i class="fa-solid fa-arrow-down"></i></a>
                         </section>
 
                         <img src="./img/jumbo.png" alt="">
@@ -84,8 +84,8 @@
         </section>
     </header>
 
-    <main>
-        <section class="fatturazione maxi-limited">
+    <main id="1">
+        <section class="fatturazione maxi-limited" >
             <h2>
                 Trova il piano business che fa per te
             </h2>
@@ -124,7 +124,7 @@
                             </div>
 
                             <button class="azure-back">
-                                <a class="white-color" href="">Prova gratis per 30 giorni</a>
+                                <a class="white-color" href="https://www.dropbox.com/try/essentials">Prova gratis per 30 giorni</a>
                             </button>
 
                             <span class="horizontal-alignment">
@@ -177,7 +177,7 @@
                             </div>
 
                             <button class="azure-back">
-                                <a class="white-color" href="">Prova gratis per 30 giorni</a>
+                                <a class="white-color" href="https://www.dropbox.com/try/essentials">Prova gratis per 30 giorni</a>
                             </button>
 
                             <span class="horizontal-alignment">
@@ -242,7 +242,7 @@
                             </div>
 
                             <button class="azure-back">
-                                <a class="white-color" href="">Contattaci</a>
+                                <a class="white-color" href="https://www.dropbox.com/try/essentials">Contattaci</a>
                             </button>
 
                             <span class="horizontal-alignment">
@@ -287,14 +287,14 @@
                     </section>
                     <section>
                         <button class="azure-back">
-                            <a class="white-color" href="">Contatta l'ufficio vendite</a>
+                            <a class="white-color" href="https://experience.dropbox.com/contact">Contatta l'ufficio vendite</a>
                         </button>
                     </section>
                 </div>
             </main>
         </article>
 
-        <section class="partner horizontal-alignment maxi-limited">
+        <section class="partner horizontal-alignment maxi-limited" id="partner">
             <section class="img">
                 <img src="./img/partner.png" alt="two people talking">
             </section>
@@ -303,14 +303,14 @@
                 <h3>Entra in contatto con un partner Dropbox</h3>
                 <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
                 <button>
-                    <a href="">
+                    <a href="https://www.dropbox.com/business/partners">
                         Trova un partner
                     </a>
                 </button>
             </section>
         </section>
 
-        <section class="operazioni maxi-limited">
+        <section class="operazioni maxi-limited" id="funzioni">
             <h2>Esegui pi&ugrave; operazioni con Dropbox Business</h2>
             <section class="container">
                 <article>
@@ -401,7 +401,7 @@
                 <h2 class="bordeaux-color">Porta Dropbox Business nella tua azienda.</h2>
 
                 <button>
-                    <a href="">Inizia la tua prova gratuita</a>
+                    <a href="https://www.dropbox.com/try/essentials">Inizia la tua prova gratuita</a>
                 </button>
 
             </section>
@@ -446,19 +446,19 @@
                 <h4 class="white-color">Dropbox</h4>
                 <ul>
                     <li>
-                        <a class="white-color" href="">Applicazione desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Applicazione desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Perch&egrave; desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Piani</a>
+                        <a class="white-color" href="https://www.dropbox.com/plans?trigger=nr">Piani</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Sicurezza</a>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Sicurezza</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">funzioni</a>
+                        <a class="white-color" href="https://www.dropbox.com/features">funzioni</a>
                     </li>
                 </ul>
             </section>
@@ -466,19 +466,19 @@
                 <h4 class="white-color">Prodotti</h4>
                 <ul>
                     <li>
-                        <a class="white-color" href="">Applicazione desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Applicazione desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Perch&egrave; desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Piani</a>
+                        <a class="white-color" href="https://www.dropbox.com/plans?trigger=nr">Piani</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Sicurezza</a>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Sicurezza</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">funzioni</a>
+                        <a class="white-color" href="https://www.dropbox.com/features">funzioni</a>
                     </li>
                 </ul>
             </section>
@@ -486,19 +486,19 @@
                 <h4 class="white-color">Azienda</h4>
                 <ul>
                     <li>
-                        <a class="white-color" href="">Applicazione desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Applicazione desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Perch&egrave; desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Piani</a>
+                        <a class="white-color" href="https://www.dropbox.com/plans?trigger=nr">Piani</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Sicurezza</a>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Sicurezza</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">funzioni</a>
+                        <a class="white-color" href="https://www.dropbox.com/features">funzioni</a>
                     </li>
                 </ul>
             </section>
@@ -506,19 +506,19 @@
                 <h4 class="white-color">Supporto</h4>
                 <ul>
                     <li>
-                        <a class="white-color" href="">Applicazione desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Applicazione desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Perch&egrave; desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Piani</a>
+                        <a class="white-color" href="https://www.dropbox.com/plans?trigger=nr">Piani</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Sicurezza</a>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Sicurezza</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">funzioni</a>
+                        <a class="white-color" href="https://www.dropbox.com/features">funzioni</a>
                     </li>
                 </ul>
             </section>
@@ -526,19 +526,19 @@
                 <h4 class="white-color">Community</h4>
                 <ul>
                     <li>
-                        <a class="white-color" href="">Applicazione desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Applicazione desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Perch&egrave; desktop</a>
+                        <a class="white-color" href="https://www.dropbox.com/desktop">Perch&egrave; desktop</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Piani</a>
+                        <a class="white-color" href="https://www.dropbox.com/plans?trigger=nr">Piani</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">Sicurezza</a>
+                        <a class="white-color" href="https://www.dropbox.com/business/solutions">Sicurezza</a>
                     </li>
                     <li>
-                        <a class="white-color" href="">funzioni</a>
+                        <a class="white-color" href="https://www.dropbox.com/features">funzioni</a>
                     </li>
                 </ul>
             </section>
