added hover and transition effect to buttons and links

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <section class="text">
                 <h3>Entra in contatto con un partner Dropbox</h3>
                 <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                <button>
+                <button class="white-back">
                     <a href="https://www.dropbox.com/business/partners">
                         Trova un partner
                     </a>
@@ -400,7 +400,7 @@
 
                 <h2 class="bordeaux-color">Porta Dropbox Business nella tua azienda.</h2>
 
-                <button>
+                <button class="white-back">
                     <a href="https://www.dropbox.com/try/essentials">Inizia la tua prova gratuita</a>
                 </button>
 
