added accordion hover effect

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="gray-color" href="#funzioni">Funzioni</a>
                         </li>
                         <li>
-                            <a class="gray-color" href="https://www.dropbox.com/plans">Piani e Prezzi</a>
+                            <a class="gray-color" href="#1">Piani e Prezzi</a>
                         </li>
                     </ul>
                 </nav>
@@ -410,32 +410,30 @@
         <section class="faq maxi-limited">
             <h2>Domande frequenti</h2>
 
-            <section class="horizontal-alignment">
+            <button class="accordion horizontal-alignment">
+                Qual &grave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced<i class="fa-solid fa-angle-down"></i>
+            </button>  
+            <div class="panel">
                 <p>
-                    Qual &grave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium suscipit sed vitae ad. Cum quasi vel necessitatibus officiis ea excepturi quidem, repellat repudiandae itaque magni aliquid reprehenderit eum error quae.
                 </p>
-
-                <i class="fa-solid fa-angle-down"></i>
-
-            </section>  
-
-            <section class="horizontal-alignment">
+            </div>
+            <button class="accordion horizontal-alignment">
+                Qual &grave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced<i class="fa-solid fa-angle-down"></i>
+            </button>  
+            <div class="panel">
                 <p>
-                    Qual &grave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium suscipit sed vitae ad. Cum quasi vel necessitatibus officiis ea excepturi quidem, repellat repudiandae itaque magni aliquid reprehenderit eum error quae.
                 </p>
-
-                <i class="fa-solid fa-angle-down"></i>
-
-            </section>  
-
-            <section class="horizontal-alignment">
+            </div>
+            <button class="accordion horizontal-alignment">
+                Qual &grave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced<i class="fa-solid fa-angle-down"></i>
+            </button>  
+            <div class="panel">
                 <p>
-                    Qual &grave; la differenza tra Dropbox Business Standard e Dropbox Business Advanced
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium suscipit sed vitae ad. Cum quasi vel necessitatibus officiis ea excepturi quidem, repellat repudiandae itaque magni aliquid reprehenderit eum error quae.
                 </p>
-    
-                <i class="fa-solid fa-angle-down"></i>
-    
-            </section>  
+            </div>
 
         </section>
     </main>
