--- a/supporto/index.html
+++ b/supporto/index.html
@@ -6,15 +6,59 @@
     <title>Supporto</title>
 
     <link rel="stylesheet" href="style/style.css">
+
+    <!-- Space Grotesk -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+
+    <!-- Fontawesome 6.5.2 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
-        <section class="top">
-
+        <section class="top horizontal-alignment">
+            <img src="./img/logo-small.png" alt="dropbox logo">
+            <section class="header-links horizontal-alignment">
+                <ul class="horizontal-alignment">
+                    <li>
+                        <a class="gray-color" href="">Centro assistenza</a>
+                    </li>
+                    <li>
+                        <a class="gray-color" href="">Community</a>
+                    </li>
+                    <li>
+                        <a class="gray-color" href="">Formazione su Dropbox</a>
+                    </li>
+                    <li>
+                        <a class="gray-color" href="">Contatta il supporto</a>
+                    </li>
+                </ul>
+                <section class="search-bar">
+                    <input type="search" placeholder="Cerca">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </section>
+            </section>
         </section>
 
-        <section class="bottom">
-
+        <section class="bottom horizontal-alignment">
+            <ul class="horizontal-alignment">
+                <li>
+                    <a href="">Centro assistenza</a>
+                </li>
+                <li>
+                    <a href="">Utilizza Dropbox</a>
+                </li>
+                <li>
+                    <a href="">Account</a>
+                </li>
+                <li>
+                    <a href="">Prodotti</a>
+                </li>
+                <li>
+                    <a href="">Inizia</a>
+                </li>
+            </ul>
         </section>
     </header>
 
